--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,20 +4,30 @@
     "context": ".",
     "dockerfile": "Dockerfile"
   },
-  "postCreateCommand": "pip3 install --no-cache-dir -r requirements.txt",
-  "forwardPorts": [8000],
-  "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash",
-    "editor.formatOnSave": true,
-    "python.pythonPath": "/usr/bin/python3",
-    "python.languageServer": "Pylance"
+  "postCreateCommand": "pip3 install --no-cache-dir -r requirements.txt && npm install -g npm",
+  "forwardPorts": [8501],
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash",
+        "editor.formatOnSave": true,
+        "python.pythonPath": "/usr/bin/python3",
+        "python.languageServer": "Pylance"
+      },
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-azuretools.vscode-docker",
+        "njpwerner.autodocstring",
+        "esbenp.prettier-vscode",
+        "dbaeumer.vscode-eslint"
+      ]
+    },
+    "codespaces": {
+      "features": {
+        "node": "latest"
+      }
+    }
   },
-  "extensions": [
-    "ms-python.python",
-    "ms-python.vscode-pylance",
-    "ms-azuretools.vscode-docker",
-    "njpwerner.autodocstring",
-    "esbenp.prettier-vscode"
-  ],
   "remoteUser": "root"
 }
