--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ venv/
 .venv
 
 
+
 # Claude Flow generated files
 .claude/settings.local.json
 .mcp.json
@@ -52,3 +53,4 @@ claude-flow
 claude-flow.bat
 claude-flow.ps1
 hive-mind-prompt-*.txt
+.aider*
