--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ venv/
 
 
 
+
 # Claude Flow generated files
 .claude/settings.local.json
 .mcp.json
@@ -54,3 +55,4 @@ claude-flow.bat
 claude-flow.ps1
 hive-mind-prompt-*.txt
 .aider*
+.env
